--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,14 @@ android {
 
 dependencies {
 
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //moshi
+    implementation'com.squareup.moshi:moshi-kotlin:1.12.0'
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
