--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     implementation'com.squareup.moshi:moshi-kotlin:1.12.0'
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.8'
+
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
