--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,11 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+}
+//epoxy
+kapt {
+    correctErrorTypes = true
 }
 
 android {
@@ -29,6 +34,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -46,6 +54,9 @@ dependencies {
     //viewmodel
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 
+    //epoxy
+    implementation 'com.airbnb.android:epoxy:4.4.1'
+    kapt('com.airbnb.android:epoxy-processor:4.4.1')
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
