home screen design, structure and paging added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,10 @@ dependencies {
     //epoxy
     implementation 'com.airbnb.android:epoxy:4.4.1'
     kapt('com.airbnb.android:epoxy-processor:4.4.1')
+    implementation "com.airbnb.android:epoxy-paging:4.4.1"
+
+    //paging
+    implementation 'androidx.paging:paging-runtime:2.1.2'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
